test/fail/const_alloc.min
program
    const string s := "abc"
start
    s # 10;
end
